--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from storage.googleapis.com/themevessel-products/drix/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Jun 2019 07:23:47 GMT -->
 <head>
-    <title>DirX - Directory Listing HTML Template</title>
+    <title>Health Reports & Listings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
