--- a/add-listing.html
+++ b/add-listing.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from storage.googleapis.com/themevessel-products/drix/add-listing.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Jun 2019 07:26:23 GMT -->
 <head>
-    <title>DirX - Directory Listing HTML Template</title>
+    <title>Saved Reports</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
@@ -100,10 +100,7 @@
                                     My Account
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="dashboard.html">Dashboard</a>
-                                    <a class="dropdown-item" href="messages.html">Messages</a>
-                                    <a class="dropdown-item" href="bookings.html">Bookings</a>
-                                    <a class="dropdown-item" href="my-profile.html">My profile</a>
+                                   
                                     <a class="dropdown-item" href="index.html">Logout</a>
                                 </div>
                             </div>
@@ -133,9 +130,9 @@
                         </ul>
                         <h4>Listings</h4>
                         <ul>
-                            <li><a href="my-listings.html"><i class="flaticon-list-1"></i>My Listings</a></li>
-                            <li><a href="favorited-listings.html"><i class="flaticon-heart"></i>Favorited Listing</a></li>
-                            <li><a href="add-listing.html"><i class="flaticon-plus"></i>Save Listings</a></li>
+                            <li><a href="my-listings.html"><i class="flaticon-list-1"></i>My Reports</a></li>
+                            <li><a href="favorited-listings.html"><i class="flaticon-heart"></i>Favorited Reports</a></li>
+                            <li><a href="add-listing.html"><i class="flaticon-plus"></i>Saved Reports</a></li>
                         </ul>
                         <h4>Account</h4>
                         <ul>
@@ -148,17 +145,17 @@
                 <div class="content-area5 dashboard-content">
                     <div class="dashboard-header clearfix">
                         <div class="row">
-                            <div class="col-sm-12 col-md-6"><h4>Add Listing</h4></div>
+                            <div class="col-sm-12 col-md-6"><h4>Save Reports</h4></div>
                             <div class="col-sm-12 col-md-6">
                                 <div class="breadcrumb-nav">
                                     <ul>
                                         <li>
-                                            <a href="index.html">Index</a>
+                                            <a href="index.html">Home</a>
                                         </li>
                                         <li>
                                             <a href="dashboard.html">Dashboard</a>
                                         </li>
-                                        <li class="active">Add Listing</li>
+                                        <li class="active">Saved Reports</li>
                                     </ul>
                                 </div>
                             </div>
