--- a/favorited-listings.html
+++ b/favorited-listings.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from storage.googleapis.com/themevessel-products/drix/favorited-listings.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Jun 2019 07:26:22 GMT -->
 <head>
-    <title>DirX - Directory Listing HTML Template</title>
+    <title>Favorite Reports</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
@@ -79,10 +79,10 @@
                         <a href="my-invoices.html" class="nav-link">My Invoices</a>
                     </li>
                     <li class="nav-item dropdown active">
-                        <a href="favorited-listings.html" class="nav-link">Favorited Listings</a>
+                        <a href="favorited-listings.html" class="nav-link">Favorite Reports</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="add-listing.html" class="nav-link">Add Listins</a>
+                        <a href="add-listing.html" class="nav-link">Save report</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="my-profile.html" class="nav-link">My Profile</a>
@@ -109,7 +109,7 @@
                             </div>
                         </li>
                         <li>
-                            <a class="btn btn-theme btn-md" href="add-listing.html">Add Listing</a>
+                            <a class="btn btn-theme btn-md" href="add-listing.html">Save Report</a>
                         </li>
                     </ul>
                 </div>
@@ -134,7 +134,7 @@
                         <h4>Listings</h4>
                         <ul>
                             <li><a href="my-listings.html"><i class="flaticon-list-1"></i>My Listings</a></li>
-                            <li><a href="favorited-listings.html"><i class="flaticon-heart"></i>Favorited Listing</a></li>
+                            <li><a href="favorited-listings.html"><i class="flaticon-heart"></i>Favorite Reports</a></li>
                             <li><a href="add-listing.html"><i class="flaticon-plus"></i>Save Listings</a></li>
                         </ul>
                         <h4>Account</h4>
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                         <div class="dashboard-list">
-                            <h4>Favorited Listing</h4>
+                            <h4>Favorite Reports</h4>
                             <table class="manage-table">
                                 <tbody>
                                 <tr class="responsive-table">
