--- a/my-listings.html
+++ b/my-listings.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from storage.googleapis.com/themevessel-products/drix/my-listings.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Jun 2019 07:26:19 GMT -->
 <head>
-    <title>DirX - Directory Listing HTML Template</title>
+    <title>My Reports</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
@@ -109,7 +109,7 @@
                             </div>
                         </li>
                         <li>
-                            <a class="btn btn-theme btn-md" href="add-listing.html"> Listing</a>
+                            <a class="btn btn-theme btn-md" href="add-listing.html"> Report</a>
                         </li>
                     </ul>
                 </div>
@@ -131,11 +131,11 @@
                             <li class="active"><a href="dashboard.html"><i class="flaticon-dashboard"></i> Dashboard</a></li>
                             
                         </ul>
-                        <h4>Listings</h4>
+                        <h4>Reports</h4>
                         <ul>
-                            <li><a href="my-listings.html"><i class="flaticon-list-1"></i>My Listings</a></li>
-                            <li><a href="favorited-listings.html"><i class="flaticon-heart"></i>Favorited Listing</a></li>
-                            <li><a href="add-listing.html"><i class="flaticon-plus"></i>Save Listings</a></li>
+                            <li><a href="my-listings.html"><i class="flaticon-list-1"></i>My Reportss</a></li>
+                            <li><a href="favorited-listings.html"><i class="flaticon-heart"></i>Favorite Reports</a></li>
+                            <li><a href="add-listing.html"><i class="flaticon-plus"></i>Saved Reports</a></li>
                         </ul>
                         <h4>Account</h4>
                         <ul>
@@ -149,7 +149,7 @@
                     <div class="dashboard-content">
                         <div class="dashboard-header clearfix">
                             <div class="row">
-                                <div class="col-sm-12 col-md-6"><h4>My Listing</h4></div>
+                                <div class="col-sm-12 col-md-6"><h4>My Reports</h4></div>
                                 <div class="col-sm-12 col-md-6">
                                     <div class="breadcrumb-nav">
                                         <ul>
@@ -159,7 +159,7 @@
                                             <li>
                                                 <a href="dashboard.html">Dashboard</a>
                                             </li>
-                                            <li class="active">My Listing</li>
+                                            <li class="active">My Report</li>
                                         </ul>
                                     </div>
                                 </div>
