--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
             </div>
         </div>
     </div>
-    <div class="banner-inner-2">
+    <div class="banner-inner-2 ">
         <div class="container">
             <div class="text-center">
                 <h1 class="b-text">Search for all the postnatal and antenatal reports below</h1>
-                <div class="inline-search-area ml-auto mr-auto none-768">
+                <div class="inline-search-area ml-auto mr-auto ">
                     <div class="search-boxs">
                         <div class="search-col">
                             <input type="text" name="search" class="form-control has-icon b-radius" placeholder="Search for a report?">
